src/objects/APXT_CMQR__Conga_Merge_Query__c.object
<CustomObject>
    <description>Queries to be used with Conga Merge / PointMerge</description>
    <fields>
        <fullName>APXT_CMQR__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXT_CMQR__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQR__Query__c</fullName>
        <description>1 - Download Apex Data Loader. Setup &gt;&gt; Data Management &gt;&gt; Data Loader. Use it to craft and test a SELECT statement. Conga Merge only supports SELECT statements. (No object traversing, no nested Selects -- just simple queries.) 

(3) In the SOQL query&apos;s WHERE clause, you may include a parameter from the PointMerge master object by using &apos;{pv0}&apos;. For example: 
...WHERE AccountId=&apos;{pv0}&apos; 

SOQL requires that text values in WHERE clauses must be enclosed with apostrophes.

A complete example might look like the following. (This finds all of the contacts at a given account.) 
SELECT LastName, FirstName, Phone, CreatedDate, Account.Name FROM Contact WHERE AccountId = &apos;{pv0}&apos; 

(4) Copy and paste the SELECT query into a Query record. 

(5) Copy the Query record&apos;s Id to the clipboard to use in the PointMerge URL. The PointMerge URL will then contain a QueryId parameter: 

...&amp;QueryId=1234657890?pv0={!Account.Id}</description>
        <inlineHelpText>Enter a simple SOQL query as created by the Apex Data Loader. (No object traversing, no nested Selects -- just simple queries.)   See this field&apos;s description for more information.</inlineHelpText>
        <label>SOQL Select Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Query</label>
    <listViews>
        <fullName>APXT_CMQR__All</fullName>
        <columns>NAME</columns>
        <columns>APXT_CMQR__Name__c</columns>
        <columns>APXT_CMQR__Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMQ-{0000}</displayFormat>
        <label>Conga Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>